--- a/index (1).html
+++ b/index (1).html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-	<link rel="stylesheet" href="ESTILOS CSS/estilos.css">
+	<link rel="stylesheet" href="ESTILOS CSS/index v (1).css">
     <title>CURRICULUM VITAE</title>
   </head>
   <body>
