--- a/index (3).html
+++ b/index (3).html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-	<link rel="stylesheet" href="ESTILOS CSS/estilos2.css">
+	<link rel="stylesheet" href="ESTILOS CSS/index v (2).css">
     <title>CV-CURRICULUM VITAE</title>
   </head>
   <body>
