--- a/index (4).html
+++ b/index (4).html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-	<link rel="stylesheet" href="ESTILOS CSS/estilos4.css">
+	<link rel="stylesheet" href="ESTILOS CSS/index v (4).css">
     <title>CV-CURRICULUM VITAE</title>
   </head>
   <body>
