--- a/index (2).html
+++ b/index (2).html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-	<link rel="stylesheet" href="ESTILOS CSS/index v (3).css">
+	<link rel="stylesheet" href="ESTILOS CSS/index v 3.css">
     <title>CV-CURRICULUM VITAE</title>
   </head>
   <body>
